2008-10-01  Richard Hult  <richard@imendio.com>

	* libdevhelp-1.0.pc.in: Remove more gecko remains.

2008-10-01  Richard Hult  <richard@imendio.com>

	* configure.in: Bump version. Also remove unneeded AC_SUBST.

2008-10-01  Richard Hult  <richard@imendio.com>

	Add support for the keyword types added to gtk-doc output in
	devhelp2 files:
	
	* src/dh-link.c: (dh_link_new): Init ref count.
	* src/dh-link.h: Add the types here.
	
	* src/dh-keyword-model.c: (dh_keyword_model_set_words):
	* src/dh-parser.c: (parser_start_node_cb): Parse them.

2008-07-04  Alp Toker  <alp@nuanti.com>

	* src/dh-window.c:
	* src/dh-preferences.c: Avoid C++ comments and remove a couple of
	FIXMEs.

2008-07-04  Alp Toker  <alp@nuanti.com>

	* m4/:
	* src/dh-util.c: Remove Gecko leftovers.

2008-07-01  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/dh-parser.c: (parser_read_gz_file):
	Use correct string format in g_set_error (). (#537093).

2008-05-31  Alp Toker  <alp@nuanti.com>

	* src/dh-window.c: Add text search support.

2008-05-30  Alp Toker  <alp@nuanti.com>

	* src/dh-window.c: (window_activate_print):
	* data/ui/window.ui: Add printing support. Fixes bug #517115.

2008-05-30  Alp Toker  <alp@nuanti.com>

	* src/dh-window.c: (window_activate_zoom_in),
	(window_activate_zoom_out), (window_activate_zoom_default): Bring
	back zoom support using the zoom-level property added in WebKit
	r34249.

2008-05-25  Richard Hult  <richard@imendio.com>

	* configure.in:
	* src/dh-window.c: (window_populate): Hook up mac menubar.

2008-05-25  Richard Hult  <richard@imendio.com>

	* README: Update the section on dependencies.

2008-05-25  Richard Hult  <richard@imendio.com>

	* Merge initial WebKit version from Alp Toker.

2008-02-24  Mikael Hallendal  <micke@imendio.com>

	* MAINTAINERS: Removed myself.

2008-02-21  Ross Burton  <ross@burtonini.com>

	* src/dh-link.c:
	* src/dh-link.h:
	Add a GType for the DhLink boxed type.

2008-02-07  Richard Hult  <richard@imendio.com>

	* Release 0.19.
